Fixed line trimming so that tests correctly pass