@@ -1,6 +1,8 @@
 import static org.junit.jupiter.api.Assertions.*;
 import org.junit.jupiter.api.Test;
 import java.io.*;
+import java.nio.file.Files;
+import java.nio.file.Paths;
 
 public class GraphTest {
 
@@ -8,35 +10,30 @@ public class GraphTest {
     public void testFeature1_ParseGraph() throws IOException {
         InputStream is = getClass().getResourceAsStream("/input.dot");
         Graph g = GraphParser.parseGraph(is);
-        assertEquals(3, g.getNodes().size());
-        assertTrue(g.getNodes().contains("A"));
-        assertTrue(g.getNodes().contains("B"));
-        assertTrue(g.getNodes().contains("C"));
-        assertEquals(2, g.getEdges().size());
+        String expected = Files.readString(Paths.get("src/test/resources/expected_feature1.txt"));
+        assertEquals(expected.trim().replace("\r\n", "\n"), g.toString().trim().replace("\r\n", "\n"));
     }
 
     @Test
-    public void testFeature2_AddNodes() {
+    public void testFeature2_AddNodes() throws IOException {
         Graph g = new Graph();
         g.addNodeUnique("X");
         g.addNodes(new String[]{"Y", "Z", "X"});
-
-        assertEquals(3, g.getNodes().size());
-        assertTrue(g.getNodes().contains("X"));
-        assertTrue(g.getNodes().contains("Y"));
-        assertTrue(g.getNodes().contains("Z"));
+        String expected = Files.readString(Paths.get("src/test/resources/expected_feature2.txt"));
+        assertEquals(expected.trim().replace("\r\n", "\n"), g.toString().trim());
     }
 
     @Test
-    public void testFeature3_AddEdges() {
+    public void testFeature3_AddEdges() throws IOException {
         Graph g = new Graph();
         g.addNode("A");
         g.addNode("B");
         g.addEdgeUnique("A", "B");
         g.addEdgeUnique("A", "B");
         g.addEdges(new String[][]{{"B", "A"}, {"A", "B"}});
-
-        assertEquals(2, g.getEdges().size());
+        String expected = Files.readString(Paths.get("src/test/resources/expected_feature3.txt"));
+        String actual = g.toString();
+        assertEquals(expected.trim().replace("\r\n", "\n"), actual.trim().replace("\r\n", "\n"));
     }
 
     @Test
@@ -45,13 +42,10 @@ public class GraphTest {
         g.addNode("N1");
         g.addNode("N2");
         g.addEdgeUnique("N1", "N2");
-
         String path = "src/test/resources/test_output.dot";
-
         g.outputDOTGraph(path);
-        String content = new String(java.nio.file.Files.readAllBytes(java.nio.file.Paths.get(path)));
-        assertTrue(content.contains("N1 -> N2"));
-        assertTrue(content.contains("N1;"));
-        assertTrue(content.contains("N2;"));
+        String expected = Files.readString(Paths.get("src/test/resources/expected_feature4.txt"));
+        String actual = Files.readString(Paths.get(path));
+        assertEquals(expected.trim().replace("\r\n", "\n"), actual.trim().replace("\r\n", "\n"));
     }
 }
